--- a/workflows/data_portals/mosaic.Rmd
+++ b/workflows/data_portals/mosaic.Rmd
@@ -4,8 +4,11 @@ Look out for datasets that are part of the MOSAiC expedition from 2019 -2020. Th
 
 **When working on MOSAiC datasets:**
 
-- Will need to find out the `EventId` from the researcher to annotate (`Campaign` can be derived from the `EventId`).
-- There is a custom ontology for the datasets are currently in the [sem-prov-ontologies](https://github.com/DataONEorg/sem-prov-ontologies/blob/main/MOSAiC/MOSAiC.owl) repository but you shouldn't need to use it directly and copy paste from Protoge if the function works.
+- Will need to find out the `EventId` from the researcher to annotate (`Campaign` can be derived from the `eventLabel`). Ask for it in your email:
+
+> We would like to ask for the event label associated with this dataset (see https://www.pangaea.de/expeditions/events/PS122%2F4).
+
+- There is a custom ontology for the datasets are currently in the [sem-prov-ontologies](https://github.com/DataONEorg/sem-prov-ontologies/blob/main/MOSAiC/MOSAiC.owl) repository but you won't need to use it directly if the function works.
 - Use `EML::shiny_attributes` only when no annotations have been added. The function does not work well with multiple annotations
 - There are functions in `arcticdatautils` to help with annotating: `mosaic_annotate_dataset` and `mosaic_annotate_attribute`
 - The [portal](https://search.dataone.org/portals/mosaic/Data) is on DataONE. Make sure the dataset(s) show up in the portal after you add the annotations.
