--- a/workflows/pi_correspondence/email_templates/A_initial_email_template.Rmd
+++ b/workflows/pi_correspondence/email_templates/A_initial_email_template.Rmd
@@ -19,7 +19,7 @@
 
 Multiple datasets under the same project - suggest data portal feature
 
-> I would like to highlight the Data Portals feature that would enhance the ability of your datasets to be discovered together. It also enables some custom branding for the group or project. Here is an example page that we created for the Distributed Biological Observatory: https://arcticdata.io/catalog/portals/DBO. We highly suggest considering creating a portal for your datasets, you can get one started here: https://arcticdata.io/catalog/edit/portals/new/Settings. More information on how to set up can be found here: https://arcticdata.io/data-portals/.
+> I would like to highlight the Data Portals feature that would enhance the ability of your datasets to be discovered together. It also enables some custom branding for the group or project. Here is an example page that we created for the Distributed Biological Observatory: https://arcticdata.io/catalog/portals/DBO. We highly suggest considering creating a portal for your datasets, you can get one started here: https://arcticdata.io/catalog/edit/portals/new/Settings. More information on how to set up can be found here: https://arcticdata.io/data-portals/. Data portals can be set up at any point of your project.
 
 If they ask to nest the dataset
 
@@ -27,7 +27,7 @@ If they ask to nest the dataset
 
 #### Dataset citations
 
-> If there is a publication associated with this dataset, we would appreciate it if you could register the DOI of your published paper with us by using the Citations button right below the title at the dataset landing page. We are working to build our catalog of dataset citations in the Arctic Data Center.
+> If there is a publication associated with this dataset, we would appreciate it if you could register the DOI of your published paper with us by using the Citations button right below the title at the dataset landing page. We are working to build our catalog of dataset citations in the Arctic Data Center. This can be done at any point.
 
 #### Title
 
@@ -45,11 +45,11 @@ Describes DATA in package (ideally > 100 words)
 
 > We would like to add some additional context to your abstract. We hope to add the following: [ADJUST THE DEPENDING ON WHAT IS MISSING]
 
-    - The motivation of the study
-    - Where and when the research took place
-    - At least one sentence summarizing general methodologies
-    - All acronyms are defined
-    - At least 100 words long
+- The motivation of the study
+- Where and when the research took place
+- At least one sentence summarizing general methodologies
+- All acronyms are defined
+- At least 100 words long
 
 Offer this if submitter is reluctant to change:
 
@@ -57,7 +57,7 @@ Offer this if submitter is reluctant to change:
 
 #### Keywords
 
-> We noticed that there were not keywords for this dataset. Adding keywords will help your dataset be discovered by others. 
+> We noticed that there were no keywords for this dataset. Adding keywords will help your dataset be discovered by others. 
 
 #### Data
 
@@ -130,7 +130,7 @@ All NSF funded datasets need a funding number. Non-NSF funded datasets might not
 
 #### Methods
 
-We noticed that methods were missing from the submission. Submissions should:
+We noticed that methods were missing from the submission. Submissions should include the following:
 
 - provide instrument names (if applicable)
 - specify how sampling locations were chosen
