--- a/workflows/pi_correspondence/final_review_checklist.Rmd
+++ b/workflows/pi_correspondence/final_review_checklist.Rmd
@@ -62,6 +62,7 @@ doc <- eml_add_entity_system(doc)
 - currently using: `eml-2.2.0` (as of July 30 2020)
 - review to see if the EML version is set correctly by reviewing the ``doc$`@context` `` that it is indeed 2.2.0 under eml 
 - Re-run your code again and have the line`emld::eml_version("eml-2.2.0")` at the top
+- Make sure the system metadata is also 2.2.0
 
 ### Access
 - Granted access to PI using `set_rights_and_access()`
