--- a/workflows/pi_correspondence/final_review_checklist.Rmd
+++ b/workflows/pi_correspondence/final_review_checklist.Rmd
@@ -1,12 +1,12 @@
-
 ## Final Checklist
 
-You can click on the  assessment report on the website to for a general check. Fix anything you see there.
+You can click on the `assessment report` on the website to for a general check. Fix anything you see there.
 
 Send the link over slack for peer review by your fellow datateam members. Usually we look for the following (the list is not exhaustive):
 
 ### Special Datasets
 Please refer to the dedicated pages for instructions to handle these cases:
+
 - [MOSAiC](https://nceas.github.io/datateam-training/reference/MOSAiC.html)
 - [DBO](https://nceas.github.io/datateam-training/reference/distributed-biological-observatory-dbo-submissions.html) 
 
@@ -62,6 +62,7 @@ doc <- eml_add_entity_system(doc)
 - currently using: `eml-2.2.0` (as of July 30 2020)
 - review to see if the EML version is set correctly by reviewing the ``doc$`@context` `` that it is indeed 2.2.0 under eml 
 - Re-run your code again and have the line`emld::eml_version("eml-2.2.0")` at the top
+- Make sure the system metadata is also 2.2.0
 
 ### Access
 - Granted access to PI using `set_rights_and_access()`
@@ -70,3 +71,19 @@ doc <- eml_add_entity_system(doc)
 
 ### SFTP Files
 - if there are files transferred to us via SFTP, delete those files when the ticket is resolved
+
+### Updated datasets
+All the above applies. These are some areas to do a closer check when users update with a new file:
+
+- New data was added
+  + Temporal Coverage and Title
+  + and follow usual protocols
+- Files were replaced
+  + update physical and entityName
+  + double-check attributes are the same
+  + check for any new missing value codes that should be accounted for
+- Was the dataset published before 2021?
+  + update project info , annotations
+- Glance over entire page for any small mistakes (ie. repeated additionalMetadata, any missed &amps, typos)
+
+
